--- a/c/styles.css
+++ b/c/styles.css
@@ -721,6 +721,7 @@
     padding-right: 3.14465%;
     padding-top: 1.66667em;
     padding-bottom: 1.66667em;
+    margin-top: -10px;
   }
   #introduction:before, #introduction:after {
     content: " ";
@@ -1355,7 +1356,7 @@
 
   /* colors for different types of institutions */
   .graduate {
-    background-color: #466281;
+    background-color: #844865;
   }
 
   .undergraduate, .honors-level {
@@ -1363,11 +1364,11 @@
   }
 
   .post-graduate {
-    background-color: #844865;
+    background-color: #BF7B33;
   }
 
   .other {
-    background-color: #824646;
+    background-color: #2A9597;
   }
 
   /* colors for different programs */
